--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="utf-8" />
-    <title>hello django</title>
-</head>
-<body>
-    <h1>hello world</h1>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+<div class="row justify-content-center">
+    <div class="col-md-6 col-xs-12">
+        <h3 class="mb-3">Posts</h3>
+        <div class="d-flex justify-content-end">
+            <div class="pb-2 bd-highlight">
+                <a href="#" class="btn btn-outline-primary">Write</a>
+            </div>
+        </div>
+        <div>
+            {% for post in posts %}
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="#">{{ post.title }}</a>
+                    </h5>
+                    <p class="card-text">{{ post.text }}</p>
+                    <footer class="blockquote-footer">{{ post.author }} <cite title="Source Title">{{ post.published_date }}</cite></footer>
+                </div>
+                <div class="card-body custom-box">
+                    <a href="javascript:void(0);"><i class="far fa-comment-dots"></i>&nbsp;0</a>
+                    <a href="javascript:void(0);"><i class="far fa-heart"></i>&nbsp;0</a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
+{% endblock content %}
