--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-6 col-xs-12">
@@ -24,4 +24,4 @@
         </form>
     </div>
 </div>
-{% endblock %}
+{% endblock content %}
